--- a/Veda-bookStore/Veda-bookStore/appsettings.json
+++ b/Veda-bookStore/Veda-bookStore/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=(PC007)\\SQLEXP15;Database=BulkyBook;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=PC007\\SQLEXP15;Database=VEDA-Book;Trusted_Connection=True;MultipleActiveResultSets=true",
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
